[package]
name = "hledger-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
hledger-parse = { git = "https://github.com/zbrox/hledger-parse.git" }
regex = "1"
rust_decimal = { version = "1.41.0", features = ["macros"] }
serde = { version = "1.0" }
tokio = { version = "1.48.0", features = ["full"] }
yahoo_finance_api = "4.1.0"
