[package]
name = "hledger-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["toml"] }
hledger-parse = { git = "https://github.com/zbrox/hledger-parse.git" }
rust_decimal = "1.35"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
yahoo_finance_api = "4.1.0"

[patch."https://github.com/zbrox/hledger-parse.git"]
hledger-parse = { path = "/home/zmann/.cargo/git/checkouts/hledger-parse-55854e0f8bb04d6f/4e5b6d9" }
